# dz_Django

./: README.md  catalog_data_category.json  catalog_data_product.json  pyproject.toml  subjects.json
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_create_at_alter_product_updated_at.py  0002_product_manufactured_at_alter_product_create_at_and_more.py  0003_contact.py  0004_alter_contact_inn_alter_contact_phone_number.py  0005_userfeedback.py  0006_userfeedback_is_active.py  0007_alter_product_name.py  0007_product_user_alter_product_name_version.py  0008_product_is_published.py  0008_version.py  0009_alter_product_options.py  0009_alter_version_is_active.py  0010_alter_product_options.py  0010_alter_version_is_active.py  0011_alter_product_options.py
catalog/templates/catalog/: add_product.html  base.html  category_list.html  contact.html  product.html  product_confirm_delete.html  product_detail.html  (+2 more)
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_country_and_more.py  0003_user_is_context_manager.py  0004_alter_user_is_context_manager.py  0005_rename_is_context_manager_user_is_content_manager.py
(+19 files in other folders)
