[tool.poetry]
name = "djproject"
version = "0.1.0"
description = ""
authors = ["Anton Glazunov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
include = "^0.2.2"
psycopg2-binary = "^2.9.9"
ipython = "^8.25.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
