[tool.poetry]
name = "djproject"
version = "0.1.0"
description = ""
authors = ["Anton Glazunov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
include = "^0.2.2"
psycopg2-binary = "^2.9.9"
ipython = "^8.25.0"
pillow = "^10.3.0"
pytils = "^0.4.1"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.1"
django = "^4.2"
redis = "^5.0.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
